force-app/main/default/objects/Order__c/fields/Move_out_REP__c.field-meta.xml
<CustomField>
    <fullName>Move_out_REP__c</fullName>
    <description>Which REP is serving the customer&#39;s old address?</description>
    <inlineHelpText>Which REP is serving the customer&#39;s old address?</inlineHelpText>
    <label>Move out REP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>