force-app/main/default/objects/Order__c/fields/Moveout_REP_Email__c.field-meta.xml
<CustomField>
    <fullName>Moveout_REP_Email__c</fullName>
    <label>Moveout REP Email</label>
    <type>Email</type>
</CustomField>