force-app/main/default/objects/Order__c/fields/Name_as_it_appears_on_Payment_Card__c.field-meta.xml
<CustomField>
    <fullName>Name_as_it_appears_on_Payment_Card__c</fullName>
    <label>Name (as it appears on Payment Card)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>