force-app/main/default/objects/Order__c/fields/No_Workflows_or_Triggers__c.field-meta.xml
<CustomField>
    <fullName>No_Workflows_or_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to avoid workflows and triggers from firing.  This prevents any automated customer communication.</description>
    <inlineHelpText>Check this box to avoid workflows and triggers from firing.  This prevents any automated customer communication.</inlineHelpText>
    <label>No Workflows or Triggers</label>
    <type>Checkbox</type>
</CustomField>