force-app/main/default/objects/Order__c/fields/OIC_Creator__c.field-meta.xml
<CustomField>
    <fullName>OIC_Creator__c</fullName>
    <description>Who signed this account up?</description>
    <inlineHelpText>Who signed this account up?</inlineHelpText>
    <label>OIC Creator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>