force-app/main/default/objects/Order__c/fields/Order_Bill_Doc__c.field-meta.xml
<CustomField>
    <fullName>Order_Bill_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which bill document does was this order initially billed on?</description>
    <inlineHelpText>Which bill document does was this order initially billed on?</inlineHelpText>
    <label>Order Bill Doc</label>
    <referenceTo>Billing_Documents__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>