force-app/main/default/objects/Order__c/fields/Order_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmed_Date__c</fullName>
    <label>Confirmed Timestamp</label>
    <type>DateTime</type>
</CustomField>