force-app/main/default/objects/Order__c/fields/Order_Confirmed_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmed_Verification_Code__c</fullName>
    <description>System verification number from whoever received the order.  Ex REP API transaction # or a SourceGas Verification Number</description>
    <inlineHelpText>System verification number from whoever received the order.  Ex REP API transaction # or a SourceGas Verification Number</inlineHelpText>
    <label>Order Confirmed Verification Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>