force-app/main/default/objects/Order__c/fields/Order_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Expiration_Date__c</fullName>
    <description>When the order expires.</description>
    <label>Order Expiration Date</label>
    <type>DateTime</type>
</CustomField>