force-app/main/default/objects/Order__c/fields/Order_Failure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Order_Failure_Comments__c</fullName>
    <description>Notes about why switch/MVI could not be completed at the meter.</description>
    <inlineHelpText>Notes about why switch/MVI could not be completed at the meter.</inlineHelpText>
    <label>Failure Comments</label>
    <type>TextArea</type>
</CustomField>