force-app/main/default/objects/Order__c/fields/Order_Index_Margin_Annual__c.field-meta.xml
<CustomField>
    <fullName>Order_Index_Margin_Annual__c</fullName>
    <formula>Case (  text(Rate__r.Plan__r.Rate_Type__c), 

   &quot;Index&quot;, Rate__r.Index_Adder__c *  Premise__r.Annual_Use_Rollup__c, 
   &quot;Blended&quot;,  Rate__r.Index_Adder__c *  (Premise__r.Annual_Use_Rollup__c) *  Rate__r.Index_Rate_Percentage__c ,
   &quot;SmartBlended&quot;, Rate__r.Index_Adder__c *  (Premise__r.Annual_Use_Rollup__c) * 0.25,
   &quot;SmartCap&quot;, Rate__r.Index_Adder__c *  (Premise__r.Annual_Use_Rollup__c), 
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Index Margin Annual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>