force-app/main/default/objects/Order__c/fields/Order_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Order_Rejection_Comments__c</fullName>
    <description>Notes about rejection reason. Comes from REP.</description>
    <inlineHelpText>Notes about rejection reason. Comes from REP.</inlineHelpText>
    <label>Rejection  Comments</label>
    <type>TextArea</type>
</CustomField>