force-app/main/default/objects/Order__c/fields/Order_Rejection_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Order_Rejection_Timestamp__c</fullName>
    <description>When the order status changed to rejected</description>
    <inlineHelpText>When the order status changed to rejected</inlineHelpText>
    <label>Rejection Timestamp</label>
    <type>DateTime</type>
</CustomField>