force-app/main/default/objects/Order__c/fields/Order_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Renewal_Status__c</fullName>
    <label>Order Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>