force-app/main/default/objects/Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>What is the order status</description>
    <inlineHelpText>What is this order&#39;s current status?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready To Submit</fullName>
            </value>
            <value>
                <fullName>Enroll Page - Started</fullName>
            </value>
            <value>
                <fullName>Enroll Page - Complete</fullName>
            </value>
            <value>
                <fullName>Plan Disclosures Page - Complete</fullName>
            </value>
            <value>
                <fullName>Default Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Confirmation Code Change</fullName>
            </value>
            <value>
                <fullName>Pending DA</fullName>
            </value>
            <value>
                <fullName>DA Received From Customer</fullName>
            </value>
            <value>
                <fullName>DA Submitted To Utility</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>DA Receipt Acknowledged</fullName>
            </value>
            <value>
                <fullName>New/Successfully Submitted</fullName>
            </value>
            <value>
                <fullName>New Gas Choice Order</fullName>
            </value>
            <value>
                <fullName>Pending Information</fullName>
            </value>
            <value>
                <fullName>Pending Switch Hold</fullName>
            </value>
            <value>
                <fullName>Approved Pending Deposit</fullName>
            </value>
            <value>
                <fullName>Approved Pending Confirmation</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Gas Choice Temporary</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Pending API Response</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Terminated Early</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>