force-app/main/default/objects/Order__c/fields/Order_Status_TS__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_TS__c</fullName>
    <description>The timestamp for when the approval status was set.</description>
    <inlineHelpText>The timestamp for when the approval status was set.</inlineHelpText>
    <label>Approval Timestamp</label>
    <type>DateTime</type>
</CustomField>