force-app/main/default/objects/Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Regular Enrollment or Renewal.</description>
    <formula>IF(Rate__r.Renewal_Offer__c = TRUE, &quot;Renewal&quot;, &quot;Regular Enrollment&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Regular Enrollment or Renewal.</inlineHelpText>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>