force-app/main/default/objects/Order__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TrueCost account for this order.</description>
    <inlineHelpText>TrueCost account for this order.</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Parent Account)</relationshipLabel>
    <relationshipName>OrdersPlaced</relationshipName>
    <type>Lookup</type>
</CustomField>