force-app/main/default/objects/Order__c/fields/Payment_Card_3_digit_code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_3_digit_code__c</fullName>
    <label>Payment Card 3 digit code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>