force-app/main/default/objects/Order__c/fields/Payment_Card_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Address_City__c</fullName>
    <label>Payment Card Address City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>