force-app/main/default/objects/Order__c/fields/Payment_Card_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Address_Line_1__c</fullName>
    <label>Payment Card Address Line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>