force-app/main/default/objects/Order__c/fields/Payment_Card_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Address_Zip__c</fullName>
    <label>Payment Card Address Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>