force-app/main/default/objects/Order__c/fields/Payment_Card_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Month__c</fullName>
    <label>Payment Card Expiration Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - January</fullName>
            </value>
            <value>
                <fullName>02 - February</fullName>
            </value>
            <value>
                <fullName>03 - March</fullName>
            </value>
            <value>
                <fullName>04 - April</fullName>
            </value>
            <value>
                <fullName>05 - May</fullName>
            </value>
            <value>
                <fullName>06 - June</fullName>
            </value>
            <value>
                <fullName>07 - July</fullName>
            </value>
            <value>
                <fullName>08 - August</fullName>
            </value>
            <value>
                <fullName>09 - September</fullName>
            </value>
            <value>
                <fullName>10 - October</fullName>
            </value>
            <value>
                <fullName>11 - November</fullName>
            </value>
            <value>
                <fullName>12 - December</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>