force-app/main/default/objects/Order__c/fields/Payment_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Number__c</fullName>
    <label>Payment Card Number</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>