force-app/main/default/objects/Order__c/fields/Payment_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Type__c</fullName>
    <label>Payment Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>