force-app/main/default/objects/Order__c/fields/Phone_of_Authorized__c.field-meta.xml
<CustomField>
    <fullName>Phone_of_Authorized__c</fullName>
    <description>Phone number of the customer&#39;s authorized agent</description>
    <inlineHelpText>Phone number of the customer&#39;s authorized agent</inlineHelpText>
    <label>Phone of Authorized</label>
    <type>Phone</type>
</CustomField>