force-app/main/default/objects/Order__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What plan did the customer sign up for?</description>
    <inlineHelpText>What plan did the customer sign up for?</inlineHelpText>
    <label>Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plan__c.REP_Profile__c</field>
            <operation>equals</operation>
            <valueField>$Source.REP_Profile__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>