force-app/main/default/objects/Order__c/fields/Plan_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Plan_Expiration__c</fullName>
    <description>When does the plan from this order expire?</description>
    <inlineHelpText>When does the plan from this order expire?</inlineHelpText>
    <label>Plan Expiration</label>
    <type>Date</type>
</CustomField>