force-app/main/default/objects/Order__c/fields/PMVI_Flag__c.field-meta.xml
<CustomField>
    <fullName>PMVI_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a priority move in order?</description>
    <label>Move?</label>
    <type>Checkbox</type>
</CustomField>