force-app/main/default/objects/Order__c/fields/Premise_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Premise_Order_Type__c</fullName>
    <description>The type of premise for this order.</description>
    <formula>Premise__r.Premise_Type__c</formula>
    <inlineHelpText>The type of premise for this order.</inlineHelpText>
    <label>Premise Type</label>
    <type>Text</type>
</CustomField>