force-app/main/default/objects/Order__c/fields/Premise_Use__c.field-meta.xml
<CustomField>
    <fullName>Premise_Use__c</fullName>
    <description>Yearly premise usage</description>
    <inlineHelpText>Yearly premise usage</inlineHelpText>
    <label>Premise Use</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>