force-app/main/default/objects/Order__c/fields/Price_Details__c.field-meta.xml
<CustomField>
    <fullName>Price_Details__c</fullName>
    <formula>BLANKVALUE(Rate__r.Price_Details__c,  &quot;$&quot;&amp;text(Smart_Bill_Quote__c) &amp;&quot; per month&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Details</label>
    <type>Text</type>
</CustomField>