force-app/main/default/objects/Order__c/fields/ratetype__c.field-meta.xml
<CustomField>
    <fullName>ratetype__c</fullName>
    <label>ratetype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>