force-app/main/default/objects/Order__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convertant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>