force-app/main/default/objects/Order__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>This field captures why the REP rejected a customer.</description>
    <inlineHelpText>This field captures why the REP rejected a customer.</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Rejection</fullName>
            </value>
            <value>
                <fullName>Credit quality</fullName>
            </value>
            <value>
                <fullName>Customer Rescinded</fullName>
            </value>
            <value>
                <fullName>Deposit Unpaid</fullName>
            </value>
            <value>
                <fullName>Inaccurate address</fullName>
            </value>
            <value>
                <fullName>Inaccurate ESID</fullName>
            </value>
            <value>
                <fullName>Other (enter comments)</fullName>
            </value>
            <value>
                <fullName>Permit Problem</fullName>
            </value>
            <value>
                <fullName>Prior payment history</fullName>
            </value>
            <value>
                <fullName>Should have been a move</fullName>
            </value>
            <value>
                <fullName>Switch Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>