force-app/main/default/objects/Order__c/fields/REP_Account__c.field-meta.xml
<CustomField>
    <fullName>REP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What REP Account is this order tied to?</description>
    <inlineHelpText>What REP Account is this order tied to?</inlineHelpText>
    <label>REP Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (REP Account)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>