force-app/main/default/objects/Order__c/fields/REP_email__c.field-meta.xml
<CustomField>
    <fullName>REP_email__c</fullName>
    <label>REP email</label>
    <type>Email</type>
</CustomField>