force-app/main/default/objects/Order__c/fields/REP_Profile__c.field-meta.xml
<CustomField>
    <fullName>REP_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which REP was this order placed with?</description>
    <inlineHelpText>Which REP was this order placed with?</inlineHelpText>
    <label>REP Profile</label>
    <referenceTo>REP_Profile__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>