force-app/main/default/objects/Order__c/fields/Replacement_Order__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What order replaced this order and caused the clawback?</description>
    <inlineHelpText>What order replaced this order and caused the clawback?</inlineHelpText>
    <label>Replacement Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>ReplacementOrder</relationshipName>
    <type>Lookup</type>
</CustomField>