force-app/main/default/objects/Order__c/fields/REPOrderId__c.field-meta.xml
<CustomField>
    <fullName>REPOrderId__c</fullName>
    <label>REPOrderId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>