force-app/main/default/objects/Order__c/fields/REPOrderSubStatus__c.field-meta.xml
<CustomField>
    <fullName>REPOrderSubStatus__c</fullName>
    <label>REPOrderSubStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>