force-app/main/default/objects/Order__c/fields/REPStatus__c.field-meta.xml
<CustomField>
    <fullName>REPStatus__c</fullName>
    <label>REPStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>