force-app/main/default/objects/Order__c/fields/response__c.field-meta.xml
<CustomField>
    <fullName>response__c</fullName>
    <label>response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>