force-app/main/default/objects/Order__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If applicable.</description>
    <inlineHelpText>If applicable.</inlineHelpText>
    <label>Reward Chosen</label>
    <referenceTo>Rewards__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>