force-app/main/default/objects/Order__c/fields/Service_City__c.field-meta.xml
<CustomField>
    <fullName>Service_City__c</fullName>
    <label>Service City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>