force-app/main/default/objects/Order__c/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <label>Service State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TX</fullName>
                <default>true</default>
                <label>TX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>