force-app/main/default/objects/Order__c/fields/Service_Zip__c.field-meta.xml
<CustomField>
    <fullName>Service_Zip__c</fullName>
    <label>Service Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>