force-app/main/default/objects/Order__c/fields/SG_Key__c.field-meta.xml
<CustomField>
    <fullName>SG_Key__c</fullName>
    <description>Source gas key for refreshing data.  Combination of ConfCodeYear, acct, customer, premise.</description>
    <externalId>true</externalId>
    <inlineHelpText>Source gas key for refreshing data.  Combination of ConfCodeYear, acct, customer, premise.</inlineHelpText>
    <label>SG Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>