force-app/main/default/objects/Order__c/fields/Shortpay__c.field-meta.xml
<CustomField>
    <fullName>Shortpay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the REP has noted that this transaction isn&#39;t legitimate AND has paid an invoice where this charge is already netted out.</description>
    <inlineHelpText>Check this box if the REP has noted that this transaction isn&#39;t legitimate AND has paid an invoice where this charge is already netted out.</inlineHelpText>
    <label>Shortpay</label>
    <type>Checkbox</type>
</CustomField>