force-app/main/default/objects/Order__c/fields/Smart_Bill_Quote__c.field-meta.xml
<CustomField>
    <fullName>Smart_Bill_Quote__c</fullName>
    <description>The total price per month for the smart bill option for this year</description>
    <inlineHelpText>The total price per month for the smart bill option for this year</inlineHelpText>
    <label>Smart Bill Quote</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>