force-app/main/default/objects/Order__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Social Security Number</description>
    <inlineHelpText>Social Security Number</inlineHelpText>
    <label>SSN</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>