force-app/main/default/objects/Order__c/fields/Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_Day__c</fullName>
    <formula>DAY(InitialDateofService__c)</formula>
    <label>Start Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>