force-app/main/default/objects/Order__c/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <description>Tax Id or Employee Identification Number (EIN).</description>
    <inlineHelpText>Tax Id or Employee Identification Number (EIN).</inlineHelpText>
    <label>Tax Identification Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>