force-app/main/default/objects/Order__c/fields/TDSP__c.field-meta.xml
<CustomField>
    <fullName>TDSP__c</fullName>
    <label>TDSP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>