force-app/main/default/objects/Order__c/fields/Time_to_Approve_Reject__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Approve_Reject__c</fullName>
    <description>How long did it take the REP to approve/reject the customer?</description>
    <inlineHelpText>How long did it take the REP to approve/reject the customer?</inlineHelpText>
    <label>Time to Approve/Reject</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>