force-app/main/default/objects/Order__c/fields/Time_to_Confirm_Fail__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Confirm_Fail__c</fullName>
    <description>How long did it take the REP to confirm/fail the switch?</description>
    <inlineHelpText>How long did it take the REP to confirm/fail the switch?</inlineHelpText>
    <label>Time to Confirm/Fail</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>